--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "expo": "^32.0.0",
-    "lodash": "^4.17.11",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "react": "16.5.0",
@@ -18,7 +17,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "jest": "^24.0.0"
+    "jest": "^24.0.0",
+    "lodash": "^4.17.11"
   },
   "private": true
 }
